[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/gameplay/shop.gd" type="Script" id=1]
[ext_resource path="res://art/gameplay/block easy/black.png" type="Texture" id=2]
[ext_resource path="res://art/gameplay/block easy/yellow.jpg" type="Texture" id=3]
[ext_resource path="res://scripts/gameplay/upgrades.gd" type="Script" id=4]
[ext_resource path="res://art/gameplay/block easy/blue.png" type="Texture" id=5]
[ext_resource path="res://art/gameplay/block easy/green.png" type="Texture" id=6]
[ext_resource path="res://art/gameplay/block easy/red.png" type="Texture" id=7]
[ext_resource path="res://art/Silkscreen-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://music/shopbgm.wav" type="AudioStream" id=9]
[ext_resource path="res://art/gameplay/shop BG.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 150, 100 )
texture = ExtResource( 10 )

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "back to title"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 66.0
margin_top = -58.0
margin_right = 106.0
margin_bottom = -44.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "shop"

[node name="spawnrate" type="Node2D" parent="."]
position = Vector2( 26, 52 )
script = ExtResource( 4 )

[node name="Button2" type="Button" parent="spawnrate"]
margin_left = 420.0
margin_top = 99.0
margin_right = 478.0
margin_bottom = 126.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "max"
flat = true

[node name="Button" type="Button" parent="spawnrate"]
margin_left = 41.0
margin_top = 99.0
margin_right = 147.0
margin_bottom = 126.0
rect_min_size = Vector2( 58, 20 )
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "fortune"

[node name="TextureProgress4" type="TextureProgress" parent="spawnrate"]
margin_left = 41.0
margin_top = 117.0
margin_right = 266.0
margin_bottom = 342.0
rect_scale = Vector2( 0.2, 0.05 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress3" type="TextureProgress" parent="spawnrate"]
margin_left = 41.0
margin_top = 117.0
margin_right = 266.0
margin_bottom = 342.0
rect_scale = Vector2( 0.2, 0.05 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress2" type="TextureProgress" parent="spawnrate"]
margin_left = 41.0
margin_top = 117.0
margin_right = 266.0
margin_bottom = 342.0
rect_scale = Vector2( 0.2, 0.05 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="spawnrate"]
margin_left = 41.0
margin_top = 117.0
margin_right = 266.0
margin_bottom = 342.0
rect_scale = Vector2( 0.2, 0.05 )
texture_progress = ExtResource( 3 )

[node name="Label" type="Label" parent="spawnrate"]
margin_left = 46.0
margin_top = 80.0
margin_right = 140.0
margin_bottom = 101.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "fortune"

[node name="level" type="Label" parent="spawnrate"]
margin_left = 45.0
margin_top = 91.0
margin_right = 125.0
margin_bottom = 112.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "level: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multibutton" type="Button" parent="spawnrate"]
margin_left = 97.0
margin_top = 99.0
margin_right = 253.0
margin_bottom = 126.0
rect_scale = Vector2( 0.3, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "score boost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multi" type="Label" parent="spawnrate"]
margin_left = 100.0
margin_top = 81.0
margin_right = 244.0
margin_bottom = 102.0
rect_scale = Vector2( 0.3, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "score boost"

[node name="multilevel" type="Label" parent="spawnrate"]
margin_left = 101.0
margin_top = 91.0
margin_right = 195.0
margin_bottom = 112.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "level: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerbutton" type="Button" parent="spawnrate"]
margin_left = 152.0
margin_top = 99.0
margin_right = 276.0
margin_bottom = 126.0
rect_scale = Vector2( 0.3, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "slow time"

[node name="Button3" type="Button" parent="spawnrate"]
margin_left = 413.0
margin_top = 99.0
margin_right = 539.0
margin_bottom = 126.0
rect_scale = Vector2( 0.3, 0.4 )
custom_fonts/font = SubResource( 2 )
text = "max"
flat = true

[node name="timer" type="Label" parent="spawnrate"]
margin_left = 153.0
margin_top = 80.0
margin_right = 279.0
margin_bottom = 101.0
rect_scale = Vector2( 0.3, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "slow timer"

[node name="timerlevel" type="Label" parent="spawnrate"]
margin_left = 153.0
margin_top = 90.0
margin_right = 247.0
margin_bottom = 111.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "level: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="money" type="Label" parent="spawnrate"]
margin_left = 222.0
margin_top = -46.0
margin_right = 270.0
margin_bottom = -32.0
grow_horizontal = 0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "$$$$$$"
align = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="spawnrate"]
stream = ExtResource( 9 )

[node name="hub" type="Button" parent="spawnrate"]
margin_left = 250.0
margin_top = 139.0
margin_right = 358.0
margin_bottom = 166.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 3 )
text = "$100000"

[node name="Label2" type="Label" parent="spawnrate"]
margin_left = 234.0
margin_top = 133.0
margin_right = 420.0
margin_bottom = 154.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 4 )
text = "enter hubworld"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="spawnrate/Button" to="spawnrate" method="_on_Button_pressed"]
[connection signal="pressed" from="spawnrate/multibutton" to="spawnrate" method="_on_multibutton_pressed"]
[connection signal="pressed" from="spawnrate/timerbutton" to="spawnrate" method="_on_timerbutton_pressed"]
[connection signal="pressed" from="spawnrate/hub" to="spawnrate" method="_on_hub_pressed"]
